tests/src/frontend/syntax/invalid/empty_match.sk
fun shouldFail(v : void) : String {
  v match {
  }
}
